# machinesense

./: .gitignore  README.md  pyproject.toml
Machine_Data/: docker-compose.yml  setup_database.py
