[tool.poetry]
name = "machinesense"
version = "0.1.0"
description = ""
authors = ["Manasa Manjunatha <manasa.manjunatha10@gmail.com>"]
readme = "README.md"
packages = [{include = "machinesense", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = ">=0.3.27,<0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"